Fixing lazyLoader: Adding placeholder, so the lateral layout correctly wraps

--- a/packages/ferreiro-client/src/components/card/Card.scss
+++ b/packages/ferreiro-client/src/components/card/Card.scss
@@ -24,21 +24,33 @@
     }
 
     &__image {
-        object-fit: cover;
-        object-position: center;
+        img {
+            object-fit: cover;
+            object-position: center;
+        }
 
         @include desktop-down {
             width: 100%;
             max-height: 260px;
-            border-top-left-radius: $card-radius;
-            border-top-right-radius: $card-radius;
+
+            img {
+                width: 100%;
+                max-height: 260px;
+                border-top-left-radius: $card-radius;
+                border-top-right-radius: $card-radius;
+            }
         }
 
         @include desktop-up {
             flex: 0 0 auto;
             width: 400px;
             height: 260px;
-            border-radius: $card-radius;
+            
+            img {
+                border-radius: $card-radius;
+                height: 260px;
+                width: 400px;
+            }
         }
     }
 
