--- a/packages/ferreiro-client/src/components/cardRelatedPost/CardRelatedPost.scss
+++ b/packages/ferreiro-client/src/components/cardRelatedPost/CardRelatedPost.scss
@@ -13,12 +13,18 @@
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, .05);
 
     &__image {
-        object-fit: cover;
-        object-position: center;
+        flex: 0 0 auto;
         height: 200px;
-        border-top-left-radius: $card-radius;
-        border-top-right-radius: $card-radius;
         width: 100%;
+
+        img {
+            border-top-left-radius: $card-radius;
+            border-top-right-radius: $card-radius;
+            object-fit: cover;
+            object-position: center;            
+            height: 200px;
+            width: 100%;
+        }
     }
 
     &__content {
