--- a/packages/ferreiro-client/src/pages/blog/post/RelatedPosts.scss
+++ b/packages/ferreiro-client/src/pages/blog/post/RelatedPosts.scss
@@ -18,6 +18,7 @@
 
         @include desktop-up {
             flex-direction: row;
+            min-height: 370px;
         }
     }
 
